appDemo/kubernetes/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-compressor-ingress
  namespace: image-compressor
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: image-compressor.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
